# tree-sitter-graphql

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/c/: tree-sitter-graphql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGraphQLTests/: TreeSitterGraphQLTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
