[package]
name = "tree-sitter-graphql"
description = "GraphQL grammar for tree-sitter"
version = "0.1.0"
authors = ["Joohwan Oh <joohwan.oh@outlook.com>"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "graphql"]
categories = ["parser-implementations", "parsing", "text-editors"]
homepage = "https://github.com/joowani/tree-sitter-graphql"
repository = "https://github.com/joowani/tree-sitter-graphql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
